// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Array default test 1`] = `
{
  "columns": [],
  "name": "",
  "rows": [],
}
`;

exports[`Empty Object default test 1`] = `
{
  "columns": [],
  "name": "",
  "rows": [],
}
`;

exports[`Nested object without array default test 1`] = `
{
  "columns": [
    {
      "selector": "foo",
      "text": "foo",
      "type": "string",
    },
    {
      "selector": "bar",
      "text": "bar",
      "type": "string",
    },
    {
      "selector": "baz",
      "text": "baz",
      "type": "string",
    },
    {
      "selector": "gaz",
      "text": "gaz",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo1",
      "bar1",
      "baz1",
      "gaz1",
    ],
  ],
}
`;

exports[`Number Array default test 1`] = `
{
  "columns": [
    {
      "selector": "value",
      "text": "value",
      "type": "number",
    },
  ],
  "name": "",
  "rows": [
    [
      1,
    ],
    [
      2,
    ],
    [
      3,
    ],
  ],
}
`;

exports[`Simple Object default test 1`] = `
{
  "columns": [
    {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      "bar",
    ],
  ],
}
`;

exports[`Simple Object with number array and string array default test 1`] = `
{
  "columns": [
    {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
    {
      "selector": "users1",
      "text": "users1",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      "bar",
      "["foo","bar"]",
      "[1,2,3]",
    ],
  ],
}
`;

exports[`Simple Object with number array default test 1`] = `
{
  "columns": [
    {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      "bar",
      "[1,2,3]",
    ],
  ],
}
`;

exports[`Simple Object with number array, string array, object array default test 1`] = `
{
  "columns": [
    {
      "selector": "koo",
      "text": "koo",
      "type": "string",
    },
    {
      "selector": "moo",
      "text": "moo",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo1",
      "bar1",
    ],
    [
      "foo1",
      "bar1",
    ],
    [
      "foo1",
      "bar1",
    ],
    [
      "foo1",
      "bar1",
    ],
  ],
}
`;

exports[`Simple Object with string array default test 1`] = `
{
  "columns": [
    {
      "selector": "firstName",
      "text": "firstName",
      "type": "string",
    },
    {
      "selector": "lastName",
      "text": "lastName",
      "type": "string",
    },
    {
      "selector": "users",
      "text": "users",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
      "bar",
      "["one","two"]",
    ],
  ],
}
`;

exports[`String Array default test 1`] = `
{
  "columns": [
    {
      "selector": "value",
      "text": "value",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
    ],
    [
      "bar",
    ],
    [
      "baz",
    ],
  ],
}
`;

exports[`String Array with duplicates default test 1`] = `
{
  "columns": [
    {
      "selector": "value",
      "text": "value",
      "type": "string",
    },
  ],
  "name": "",
  "rows": [
    [
      "foo",
    ],
    [
      "bar",
    ],
    [
      "foo",
    ],
  ],
}
`;
